fixes some layout issues - destroy fullpage when on HomePage destroy - Fix map size in Request

--- a/src/assets/css/form-layout.scss
+++ b/src/assets/css/form-layout.scss
@@ -14,13 +14,10 @@
   &-left {
     margin-top: 30px;
     margin-left: 30px;
-    height: $form-height;
-
   }
   &-right {
     overflow: hidden;
     position: relative;
-    height: $form-height;
     margin: auto;
   }
 }
